--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -5,8 +5,6 @@
 {% endblock %}
 {% comment %}Own CSS{% endcomment %}
 {% block extra_css %}
-  
-  {% comment %} Own CSS {% endcomment %}
   <link rel="stylesheet" href="{% static 'css/familytree/family_view.css' %}" />
   <link rel="stylesheet" href="{% static 'css/familytree/_person_card.css' %}" />
 {% endblock %}
@@ -15,59 +13,61 @@
     <div class="container-fluid">
       {% comment %}Display Parents{% endcomment %}
       <div class="row justify-content-center" id="parents-container">
-        <div class="col-12 justify-content-center" id="parents-list" class="person-list">
+        <div class="col-12 justify-content-center" id="parents-list">
           {% for parent in person.parents.all %}
             {% include 'familytree/_person_card.html' with person=parent pov_id=person.id %}
           {% endfor %}
         </div>
-      </div>
 
-      <div class="row justify-content-center" id="parent-display-buttons">
-        {% if person.parents.all|length < 1 %}
-          <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="add-button m-2 col-5" aria-label="Add Parent"><i class="bi bi-patch-plus-fill"></i></a>
-        {% else %}
-          <button class="btn btn-success col-5 m-2" onclick="toggleSection('parents-list', 'parent-display-buttons')">Display Parents</button>
-          <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="add-button col-5 m-2" aria-label="Add Parent"><i class="bi bi-patch-plus-fill"></i></a>
-        {% endif %}
+        <div class="row justify-content-center" id="parent-display-buttons">
+          {% if person.parents.all|length < 1 %}
+            <div class="col-2">
+              <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success m-2" aria-label="Add Parent">Add Parent</a>
+            </div>
+          {% else %}
+            <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('parents-list', 'parent-display-buttons')">Display Parents</button>
+            <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Parent">Add Parent</a>
+          {% endif %}
+        </div>
       </div>
 
       {% comment %}Display middle-section{% endcomment %}
       <div class="row justify-content-center">
         {% comment %}Display Siblings{% endcomment %}
         <div class="col-4 d-flex align-self-center justify-content-center" id="siblings-container">
-          <div id="sibling-list" style="display: none;" class="person-list">
+          <div id="sibling-list" style="display: none;">
             {% for sibling in person.siblings.all %}
               {% include 'familytree/_person_card.html' with person=sibling pov_id=person.id %}
             {% endfor %}
           </div>
           <div id="siblings-display-buttons">
             {% if person.siblings|length > 0 %}
-              <button class="btn btn-success m-2" onclick="toggleSection('sibling-list', 'siblings-display-buttons')">Display Siblings</button>
-              <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="add-button m-2" aria-label="Add Sibling"><i class="bi bi-patch-plus-fill"></i></a>
+              <button class="btn btn-outline-success m-2" onclick="toggleSection('sibling-list', 'siblings-display-buttons')">Display Siblings</button>
+              <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success m-2" aria-label="Add Sibling">Add Sibling</a>
             {% else %}
-              <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="add-button m-2" aria-label="Add Sibling"><i class="bi bi-patch-plus-fill"></i></a>
+              <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success m-2" aria-label="Add Sibling">Add Sibling</a>
             {% endif %}
           </div>
         </div>
-       
+
         <div class="col-4 d-flex justify-content-center" id="middle-section">
           {% comment %}Display Pov-Person{% endcomment %}
           {% include 'familytree/_person_card.html' with person=person pov_id=person.id %}
         </div>
 
-        {% comment %}Display Partners{% endcomment %}
+        {% comment %}Display Partner{% endcomment %}
         <div class="col-4 align-self-center d-flex justify-content-center" id="partner-container">
-          <div id="partner-list" style="display: none;" class="person-list">
+          <div id="partner-list" style="display: none;">
             {% for partner in person.partners.all %}
               {% include 'familytree/_person_card.html' with person=partner pov_id=person.id %}
             {% endfor %}
           </div>
           <div id="partner-display-buttons">
-            {% if person.partners.all|length > 0 %}
-              <button class="btn btn-success" onclick="toggleSection('partner-list', 'partner-display-buttons')">Display Partner</button>
-              <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="add-button" aria-label="Add Partner"><i class="bi bi-patch-plus-fill"></i></a>
+            {% if person.partner|length < 1 %}
+              <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
             {% else %}
-              <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="add-button" aria-label="Add Partner"><i class="bi bi-patch-plus-fill"></i></a>
+              <button class="btn btn-outline-success" onclick="toggleSection('partner-list', 'partner-display-buttons')">Display Partner</button>
+              <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
             {% endif %}
           </div>
         </div>
@@ -75,7 +75,7 @@
 
       {% comment %}Display Children{% endcomment %}
       <div class="row justify-content-center" id="children-container">
-        <div class="col justify-content-center" id="children-list" class="person-list">
+        <div class="col justify-content-center" id="children-list">
           {% for child in person.children.all %}
             {% include 'familytree/_person_card.html' with person=child pov_id=person.id %}
           {% endfor %}
@@ -83,10 +83,10 @@
       </div>
       <div class="row justify-content-center" id="children-display-buttons">
         {% if person.children.all|length > 0 %}
-          <button class="btn btn-success col-5 m-2" onclick="toggleSection('children-list', 'children-display-buttons')">Display Children</button>
-          <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="add-button col-5 m-2" aria-label="Add Child"><i class="bi bi-patch-plus-fill"></i></a>
+          <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('children-list', 'children-display-buttons')">Display Children</button>
+          <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Child">Add Child</a>
         {% else %}
-          <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="add-button col-5 m-2" aria-label="Add Child"><i class="bi bi-patch-plus-fill"></i></a>
+          <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Child">Add Child</a>
         {% endif %}
       </div>
     </div>
@@ -95,7 +95,7 @@
   {% else %}
     <div id="no-person-container">
       <p>Please register yourself first.</p>
-      <a href="{% url 'add_self' %}" class="btn btn-success" aria-label="Add Family Member">Add Family Member</a>
+      <a href="{% url 'add_self' %}" class="btn btn-outline-success" aria-label="Add Family Member">Add Family Member</a>
     </div>
   {% endif %}
 {% endblock %}
