--- a/static/css/familytree/view_details.css
+++ b/static/css/familytree/view_details.css
@@ -2,11 +2,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
+
+body {
+    background-color: #fdf7ec;
+}
 .detail-container {
     display: flex;
     justify-content: center;
     padding: 3rem 1rem;
-    background-color: #fdf7ec;
+    
 }
 
 .detail-card {
