--- a/static/css/familytree/family_view.css
+++ b/static/css/familytree/family_view.css
@@ -8,6 +8,12 @@ body {
     background: linear-gradient(to bottom, #fdf7ec, #f3e5c1);
 }
 
+.flexbox{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 .hidden {
     display: none;
 }
