--- a/static/css/familytree/family_view.css
+++ b/static/css/familytree/family_view.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -8,12 +12,13 @@ body {
     background: linear-gradient(to bottom, #fdf7ec, #f3e5c1);
 }
 
-.flexbox{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+h1 {
+    text-align: center;
+    margin: 20px 0;
+    font-family: 'Merriweather', serif;
+    color: #333;
 }
+
 .hidden {
     display: none;
 }
