--- a/static/css/familytree/_person_card.css
+++ b/static/css/familytree/_person_card.css
@@ -19,9 +19,7 @@
   margin: 1rem;
   text-align: center;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-  flex: 1 1 300px;
-  min-width: 370px;
-  max-width: 370px;
+  width: 370px;
   height: 300px;
 
 }
